src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-94.snap
---
source: src/lexer.rs
description: "0x4"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0x4",
        ),
    },
]
