src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-95.snap
---
source: src/lexer.rs
description: "0x5"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0x5",
        ),
    },
]
