src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-96.snap
---
source: src/lexer.rs
description: "0x6"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0x6",
        ),
    },
]
