src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-97.snap
---
source: src/lexer.rs
description: "0x7"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0x7",
        ),
    },
]
