src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-99.snap
---
source: src/lexer.rs
description: "0x9"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0x9",
        ),
    },
]
