src/snapshots/enderpy__lexer__tests__snapshot_test_lexer.snap
---
source: src/lexer.rs
description: 1+2
---
[
    Token {
        kind: Integer,
        value: Integer(
            1,
        ),
    },
    Token {
        kind: Plus,
        value: None,
    },
    Token {
        kind: Integer,
        value: Integer(
            2,
        ),
    },
]
