src/snapshots/enderpy__lexer__tests__string-literals-1.snap
---
source: src/lexer.rs
description: "\"world\""
---
[
    Token {
        kind: StringLiteral,
        value: String(
            "\"world\"",
        ),
    },
]
