src/snapshots/enderpy__lexer__tests__string-literals-4.snap
---
source: src/lexer.rs
description: "'hello'"
---
[
    Token {
        kind: StringLiteral,
        value: Str(
            "'hello'",
        ),
        start: 0,
        end: 7,
    },
]
